syntax = "proto3";
package conductor.account;
import "helpers.proto";

message Account {
  exonum.PublicKey pub_key = 1;
  uint32 account_type = 2;
  string entity_id = 3;
  string name = 4;
  uint64 balance = 5;
  uint64 history_len = 6;
  exonum.Hash history_hash = 7;
}

message Create {
  string name = 1;
  uint32 account_type = 2;
  string entity_id = 3;
}

message Update {
  exonum.PublicKey pub_key = 1;
  string name = 2;
}

message Transfer {
  exonum.PublicKey to = 1;
  string memo = 2;
  uint64 amount = 3;
  uint64 seed = 4;
}

message Issue {
  string memo = 1;
  uint64 amount = 2;
  uint64 seed = 3;
}


